<resources>
    <string name="app_name">Goblin Warlord Simulator</string>
    <string name="counter_f_text"># left in my budget </string>
    <string name="counter_f_num">things</string>
    <string name="donate_to_me_pls">Earn Quick Gold (Watch Ads)</string>
    <string name="APPLICATION_VERSION">V0.0.0</string>
    <string name="placeholder_soon">More coming soon!</string>


    <!--Warlord Main Activity-->
    <string name="label_for_campaign">Campaign for Loot!</string>
    <string name="label_for_warlord_title">Welcome, Warlord!</string>

    <string name="label_info">View Info</string>
    <string name="label_settings">Options/Privacy</string>
    <string name="label_contact">Contact</string>

    <string name="label_damageDealt">Damage Done: </string>
    <string name="label_currencyEarned">Earned: </string>
    <string name="label_detailedStats">View Detailed Stats</string>
    <string name="label_upgrade">View Upgrades</string>

    <!--Monetize For Me Activity-->
    <string name="label_for_banner_swiper">RUMMAGE for Treasure</string>
    <string name="description_for_banner_swiper">Note: Rummaging for treasure will take you to a mode where there will be some swipable ads. Swipe left or right to add to your stash. </string>

    <string name="label_for_video_watcher">Consult the Goblin Seer</string>
    <string name="description_for_video_watcher">Note: Consulting the goblin seer will show you some advertisements. Watch the advertisement to the end and the goblin seer will reward you with a vision of treasure.</string>

    <string name="title_for_monetization_mode">Quick Campaigns</string>
    <string name="notice_for_monetization_mode">Note: To add to your stash quickly, you can select one of the options below to see an advertisement.</string>

    <!--Monetized Stats Fragment-->
    <string name="label_for_banner_count"># Banners raised: </string>
    <string name="label_for_video_count"># Scrolls read: </string>
    <string name="label_for_total_currency">Total Current Stash: </string>
    <string name="label_for_total_damage">Total Damage Dealt: </string>


    <!-- Video Watcher Activity -->

    <string name="label_for_play_video">Video is Ready!</string>
    <string name="label_for_load_video">Load a Video!</string>
    <string name="explanation_for__video">Thanks for supporting us. Watching videos allows us to bring you new features and content. :) </string>


    <!-- Banner Swiper Activity -->

    <string name="label_for_swipe_top"> SWIPE ALONG HERE</string>
    <string name="label_for_swipe_bottom">EITHER DIRECTION IS FINE</string>
    <string name="explanation_for__swiper">Thanks for supporting us. Each successful banner view allows us, the app devs, to bring you more happiness.</string>


    <!--Detailed Stats-->

    <string name="label_title_detailedStats">Detailed Stats</string>


    <!--Upgrades -->


    <string name="label_title_upgrades">Purchase Upgrades</string>


    <!-- Contact-->

    <string name="label_title_contact">CONTACT</string>
    <string name="explanation_contact">Our application is in alpha. Please excuse the lack of content! We are aggressively developing more content.</string>
    <string name="label_info_contact">For any comments / concerns, please reach out to:</string>
    <string name="value_info_contact">jforeza@gmail.com</string>

    <!-- Info-->

    <string name="label_title_info">Application Information</string>

    <!-- Setting-->

    <string name="label_title_setting">Options / Privacy </string>
    <string name="privacy_policy">Privacy Policy
Effective date: November 09, 2018

Goblin Warlord Simulator ("us", "we", or "our") operates the Goblin Warlord Simulator mobile application (the "Service").
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sapien pellentesque habitant morbi tristique senectus et. Magna fermentum iaculis eu non diam phasellus. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae. Integer vitae justo eget magna fermentum. Risus nullam eget felis eget nunc lobortis. Etiam erat velit scelerisque in dictum non. Suspendisse ultrices gravida dictum fusce ut placerat orci nulla. Arcu felis bibendum ut tristique. Amet risus nullam eget felis eget nunc. Semper quis lectus nulla at volutpat diam ut venenatis. Nulla posuere sollicitudin aliquam ultrices sagittis orci. Tortor id aliquet lectus proin. Neque aliquam vestibulum morbi blandit cursus risus at. Praesent elementum facilisis leo vel fringilla. Tortor consequat id porta nibh. Diam phasellus vestibulum lorem sed risus ultricies.
We will let you know via email and/or a prominent notice on our Service, prior to the change becoming effective and update the "effective date" at the top of this Privacy Policy.

You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.

Contact Us
If you have any questions about this Privacy Policy, please contact us:

By email: jforeza@gmail.com</string>

</resources>
